# upbge

./: .clang-format  .gitignore  .gitmodules  .travis.yml  ARCHITECTURAL_IMPROVEMENTS.md  BUILD_WINDOWS.md  CMakeLists.txt  COPYING  FINAL_TEST_RESULTS.md  FURTHER_SEPARATION_COMPLETE.md  GNUmakefile  IMPLEMENTATION_COMPLETE.md  LICENSE.TXT  PHYSICS_MODE_REFACTORING_SUMMARY.md  RAS_OutLine2DFilter.glsl  README.md  REFACTORING_COMPLETE.md  TESTING_GUIDE.md  ThirdPartyNotices.txt  appveyor.yml  d9.patch.save  jolt-physics-implementation-6ab835.md  make.bat
source/blenderplayer/: CMakeLists.txt  CMakeLists.txt.orig
source/blenderplayer/bad_level_call_stubs/: CMakeLists.txt  stubs.c  stubs.c.orig
source/gameengine/: CMakeLists.txt  Game runtime readme.txt
source/gameengine/BlenderRoutines/: BL_KetsjiEmbedStart.cpp  BL_KetsjiEmbedStart.cpp.orig  BL_System.cpp  CMakeLists.txt  KX_BlenderCanvas.cpp  KX_BlenderCanvas.h  KX_BlenderInputDevice.h  KX_BlenderKeyboardDevice.cpp  KX_BlenderKeyboardDevice.h  KX_BlenderMouseDevice.cpp  KX_BlenderMouseDevice.h  KX_BlenderSystem.cpp  SConscript
source/gameengine/Common/: CM_Clock.cpp  CM_Clock.h  CM_Format.h  CM_List.h  CM_Map.h  CM_Message.cpp  CM_Message.h  CM_RefCount.h  CM_Template.h  CM_Thread.cpp  CM_Thread.h  CM_Update.h  CM_Utils.cpp  CM_Utils.h  CMakeLists.txt
source/gameengine/Converter/: BL_ActionActuator.cpp  BL_ActionActuator.h  BL_ActionData.cpp  BL_ActionData.h  BL_ArmatureActuator.cpp  BL_ArmatureActuator.h  BL_ArmatureChannel.cpp  BL_ArmatureChannel.h  BL_ArmatureConstraint.cpp  BL_ArmatureConstraint.h  BL_ArmatureObject.cpp  BL_ArmatureObject.h  BL_BlenderConverter.cpp  BL_BlenderConverter.h  BL_BlenderDataConversion.cpp  BL_BlenderDataConversion.h  BL_BlenderScalarInterpolator.cpp  BL_BlenderScalarInterpolator.h  BL_BlenderSceneConverter.cpp  BL_BlenderSceneConverter.h  BL_ConvertActuators.cpp  BL_ConvertActuators.h  BL_ConvertControllers.cpp  BL_ConvertControllers.h  BL_ConvertObjectInfo.cpp  BL_ConvertObjectInfo.h  BL_ConvertProperties.cpp  BL_ConvertProperties.h  BL_ConvertSensors.cpp  BL_ConvertSensors.h  BL_Converter.cpp  BL_Converter.h  BL_DataConversion.cpp  BL_DataConversion.h  BL_DeformableGameObject.cpp  BL_DeformableGameObject.h  BL_IpoConvert.cpp  BL_IpoConvert.h  BL_MaterialShader.cpp  BL_MaterialShader.h  (+38 more)
source/gameengine/Device/: CMakeLists.txt  DEV_EventConsumer.cpp  DEV_EventConsumer.h  DEV_InputDevice.cpp  DEV_InputDevice.h  DEV_Joystick.cpp  DEV_Joystick.h  DEV_JoystickDefines.h  DEV_JoystickEvents.cpp  DEV_JoystickMappingdb.h  DEV_JoystickPrivate.h  DEV_JoystickVibration.cpp
source/gameengine/Eevee/: CMakeLists.txt
source/gameengine/Expressions/: CMakeLists.txt  EXP_Attribute.h  EXP_AttributeDef.h  EXP_BaseListValue.h  EXP_BaseListWrapper.h  EXP_BaseMapValue.h  EXP_BoolValue.h  EXP_ConstExpr.h  EXP_Dictionary.h  EXP_EmptyValue.h  EXP_ErrorValue.h  EXP_Expression.h  EXP_FloatValue.h  EXP_HashedPtr.h  EXP_IdentifierExpr.h  EXP_IfExpr.h  EXP_InputParser.h  EXP_IntValue.h  EXP_ListValue.h  EXP_ListWrapper.h  EXP_MapValue.h  EXP_Operator1Expr.h  EXP_Operator2Expr.h  EXP_PropBool.h  EXP_PropFloat.h  EXP_PropInt.h  EXP_PropPython.h  EXP_PropString.h  EXP_PropValue.h  EXP_PyObjectPlus.h  EXP_Python.h  EXP_PythonCallBack.h  EXP_PythonUtils.h  EXP_PythonValue.h  EXP_StringValue.h  EXP_Thread.h  EXP_Value.h  EXP_Vector2Value.h  EXP_Vector3Value.h  EXP_Vector4Value.h  (+1 more)
source/gameengine/GameLogic/: CMakeLists.txt  SCA_2DFilterActuator.cpp  SCA_2DFilterActuator.h  SCA_ANDController.cpp  SCA_ANDController.h  SCA_ActionActuator.cpp  SCA_ActionActuator.h  SCA_ActuatorEventManager.cpp  SCA_ActuatorEventManager.h  SCA_ActuatorSensor.cpp  SCA_ActuatorSensor.h  SCA_AddObjectActuator.cpp  SCA_AddObjectActuator.h  SCA_AlwaysSensor.cpp  SCA_AlwaysSensor.h  SCA_ArmatureSensor.cpp  SCA_ArmatureSensor.h  SCA_BasicEventManager.cpp  SCA_BasicEventManager.h  SCA_CameraActuator.cpp  SCA_CameraActuator.h  SCA_CollectionActuator.cpp  SCA_CollectionActuator.h  SCA_CollisionSensor.cpp  SCA_CollisionSensor.h  SCA_ConstraintActuator.cpp  SCA_ConstraintActuator.h  SCA_DelaySensor.cpp  SCA_DelaySensor.h  SCA_DynamicActuator.cpp  SCA_DynamicActuator.h  SCA_EndObjectActuator.cpp  SCA_EndObjectActuator.h  SCA_EventManager.cpp  SCA_EventManager.h  SCA_ExpressionController.cpp  SCA_ExpressionController.h  SCA_GUIActuator.cpp  SCA_GUIActuator.h  SCA_GameActuator.cpp  (+101 more)
source/gameengine/GamePlayer/: CMakeLists.txt  GPG_Canvas.cpp  GPG_Canvas.h  GPG_Ghost.cpp  GPG_ghost.cpp  SpindleEncryption.cpp  SpindleEncryption.h
source/gameengine/Ghost/: CMakeLists.txt  GH_EventConsumer.cpp  GH_EventConsumer.h  GH_InputDevice.cpp  GH_InputDevice.h  GH_KeyboardDevice.cpp  GH_KeyboardDevice.h
source/gameengine/Ketsji/: BL_Action.cpp  BL_Action.h  BL_ActionManager.cpp  BL_ActionManager.h  BL_BlenderShader.cpp  BL_BlenderShader.cpp.orig  BL_BlenderShader.h  BL_Material.cpp  BL_Material.h  BL_Shader.cpp  BL_Shader.h  BL_Texture.cpp  BL_Texture.h  CMakeLists.txt  KX_2DFilter.cpp  KX_2DFilter.h  KX_2DFilterFrameBuffer.cpp  KX_2DFilterFrameBuffer.h  KX_2DFilterManager.cpp  KX_2DFilterManager.h  KX_2DFilterOffScreen.cpp  KX_2DFilterOffScreen.h  KX_AddObjectActuator.cpp  KX_AddObjectActuator.h  KX_ArmatureSensor.cpp  KX_ArmatureSensor.h  KX_BatchGroup.cpp  KX_BatchGroup.h  KX_BlenderCanvas.cpp  KX_BlenderCanvas.h  KX_BlenderMaterial.cpp  KX_BlenderMaterial.cpp.orig  KX_BlenderMaterial.h  KX_BoneParentNodeRelationship.cpp  KX_BoneParentNodeRelationship.h  KX_BoundingBox.cpp  KX_BoundingBox.h  KX_Camera.cpp  KX_Camera.cpp.orig  KX_Camera.h  (+247 more)
source/gameengine/Launcher/: CMakeLists.txt  LA_BlenderLauncher.cpp  LA_BlenderLauncher.h  LA_Launcher.cpp  LA_Launcher.h  LA_PlayerLauncher.cpp  LA_PlayerLauncher.h  LA_System.cpp  LA_System.h  LA_SystemCommandLine.cpp  LA_SystemCommandLine.h
source/gameengine/Logic/: CMakeLists.txt  LOG_BaseNode.cpp  LOG_BaseNode.h  LOG_FunctionNode.cpp  LOG_FunctionNode.h  LOG_FunctionSocket.cpp  LOG_FunctionSocket.h  LOG_INode.cpp  LOG_INode.h  LOG_INodeSocket.cpp  LOG_INodeSocket.h  LOG_LogicSocket.cpp  LOG_LogicSocket.h  LOG_Node.cpp  (+12 more)
(+4011 files in other folders)
